{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 16,
  "lineage": "7eff63c8-69f6-aaa1-bc17-dfd82a097b42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "comfyui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0354c98ae10b02961",
            "arn": "arn:aws:ec2:us-east-1:161101091064:instance/i-0ad5d7883b2bb895f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 24,
            "cpu_options": [
              {
                "core_count": 24,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "comfyui-hunyuan3d"
                },
                "throughput": 125,
                "volume_id": "vol-00f550813f4b1b201",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "comfyui-hunyuan3d",
            "id": "i-0ad5d7883b2bb895f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "g6.12xlarge",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c91de300a845e441",
            "private_dns": "ip-10-0-1-224.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.224",
            "public_dns": "ec2-54-174-165-245.compute-1.amazonaws.com",
            "public_ip": "54.174.165.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:161101091064:key/4d8e4e1f-9df0-4874-959c-92b6aa629be9",
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "comfyui-hunyuan3d"
                },
                "throughput": 125,
                "volume_id": "vol-06f42961651cda7da",
                "volume_size": 550,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acdc2cc86c06c556",
            "tags": {
              "Name": "comfyui-hunyuan3d"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "comfyui-hunyuan3d",
              "Project": "comfyui-hunyuan3d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063b1dbeb03fa52f9"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.comfyui",
            "aws_security_group.comfyui",
            "aws_subnet.comfyui",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "comfyui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161101091064:internet-gateway/igw-018281eece4a072c4",
            "id": "igw-018281eece4a072c4",
            "owner_id": "161101091064",
            "tags": {
              "Name": "comfyui-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "comfyui-igw",
              "Project": "comfyui-hunyuan3d"
            },
            "vpc_id": "vpc-02156438258859a89"
          },
          "dependencies": [
            "aws_vpc.comfyui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "comfyui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161101091064:route-table/rtb-05c0034186ab01e74",
            "id": "rtb-05c0034186ab01e74",
            "owner_id": "161101091064",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018281eece4a072c4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "comfyui-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "comfyui-rt",
              "Project": "comfyui-hunyuan3d"
            },
            "timeouts": null,
            "vpc_id": "vpc-02156438258859a89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.comfyui",
            "aws_vpc.comfyui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "comfyui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031170b0e37b68b0e",
            "route_table_id": "rtb-05c0034186ab01e74",
            "subnet_id": "subnet-0acdc2cc86c06c556"
          },
          "dependencies": [
            "aws_internet_gateway.comfyui",
            "aws_route_table.comfyui",
            "aws_subnet.comfyui",
            "aws_vpc.comfyui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "comfyui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161101091064:security-group/sg-063b1dbeb03fa52f9",
            "description": "Allow SSH and ComfyUI access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063b1dbeb03fa52f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ComfyUI web interface",
                "from_port": 8188,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8188
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "comfyui-hunyuan3d",
            "name_prefix": "",
            "owner_id": "161101091064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "comfyui-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "comfyui-sg",
              "Project": "comfyui-hunyuan3d"
            },
            "timeouts": null,
            "vpc_id": "vpc-02156438258859a89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.comfyui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "comfyui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161101091064:subnet/subnet-0acdc2cc86c06c556",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acdc2cc86c06c556",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "161101091064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "comfyui-subnet"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "comfyui-subnet",
              "Project": "comfyui-hunyuan3d"
            },
            "vpc_id": "vpc-02156438258859a89"
          },
          "dependencies": [
            "aws_vpc.comfyui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "comfyui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:161101091064:vpc/vpc-02156438258859a89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2d6ba488cb5ec93",
            "default_route_table_id": "rtb-0b0d9826db221c744",
            "default_security_group_id": "sg-0f15b861e6977b301",
            "dhcp_options_id": "dopt-5391c82b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02156438258859a89",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0d9826db221c744",
            "owner_id": "161101091064",
            "tags": {
              "Name": "comfyui-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "comfyui-vpc",
              "Project": "comfyui-hunyuan3d"
            }
          }
        }
      ]
    }
  ]
}